# M-detector

./: CMakeLists.txt  README.md  package.xml
config/kitti/: kitti1.yaml
include/: parallel_q.h  types.h
include/cluster_predict/: voxel_cluster.h
include/m-detector-noted/: dyn_obj_cluster.h  dyn_obj_filter.h
launch/: cal_recall.launch  detector_kitti.launch  display.launch
log/: dynfilter_noted.INFO  dynfilter_noted.gj.gj.log.INFO.20240322-111138.24170  dynfilter_noted.gj.gj.log.INFO.20240322-175948.30641  dynfilter_noted.gj.gj.log.INFO.20240325-095559.11169  dynfilter_noted.gj.gj.log.INFO.20240325-102119.24543  dynfilter_noted.gj.gj.log.INFO.20240325-112602.21967  dynfilter_noted.gj.gj.log.INFO.20240325-112743.23650  dynfilter_noted.gj.gj.log.INFO.20240325-114018.27796  dynfilter_noted.gj.gj.log.INFO.20240325-152443.15022  dynfilter_noted.gj.gj.log.INFO.20240325-153313.23022  dynfilter_noted.gj.gj.log.INFO.20240325-154949.4382  dynfilter_noted.gj.gj.log.INFO.20240325-161327.24454  dynfilter_noted.gj.gj.log.INFO.20240325-163143.7460  dynfilter_noted.gj.gj.log.INFO.20240325-163916.15073  dynfilter_noted.gj.gj.log.INFO.20240325-164254.19180  dynfilter_noted.gj.gj.log.INFO.20240325-164609.21702  dynfilter_noted.gj.gj.log.INFO.20240325-165049.26452  dynfilter_noted.gj.gj.log.INFO.20240325-165143.27763  dynfilter_noted.gj.gj.log.INFO.20240325-192851.26585  dynfilter_noted.gj.gj.log.INFO.20240325-193254.30155  dynfilter_noted.gj.gj.log.INFO.20240325-193459.32235  dynfilter_noted.gj.gj.log.INFO.20240325-194005.1893  right_output.17411
src/: cal_recall_multi.cpp  display_prediction.cpp  dyn_obj_cluster.cpp  dyn_obj_filter.cpp  dynfilter_with_odom.cpp
